1. 新增 Profile 頁面，加入授權驗證，需登入，才能夠訪問。2. 限制商品管理頁面僅 admin 使用者才能夠進入。 3. 新增 Profile 頁面顯示詳細使用者註冊資訊。4. 新增更新使用者 Profile 資訊。 5. 新增變更密碼頁面與實作功能。 6. 新增忘記密碼頁面，以及建立重設密碼連結。 7. 使用 MailKit/Gmail 寄送重設密碼連結。8. 新增修改密碼頁面與實作其功能，讓使用者能夠修改密碼。

--- a/BestStoreMVC/Views/Shared/_Layout.cshtml
+++ b/BestStoreMVC/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
-                                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Index">Profile</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile">Profile</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" asp-controller="Account" asp-action="Logout">Logout</a></li>
                                     </ul>
@@ -73,7 +73,7 @@
                                         @(appUser!.FirstName + " " + appUser!.LastName + " (Client)")
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Index">Profile</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile">Profile</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" asp-controller="Account" asp-action="Logout">Logout</a></li>
                                     </ul>
