--- a/BestStoreMVC/Views/Shared/_Layout.cshtml
+++ b/BestStoreMVC/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
+                                        <li><a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
                                         <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile">Profile</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" asp-controller="Account" asp-action="Logout">Logout</a></li>
