--- a/BestStoreMVC/Views/Store/Index.cshtml
+++ b/BestStoreMVC/Views/Store/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model StoreSearchModel;
+﻿@using BestStoreMVC.Models.ViewModel
+@model StoreSearchModel;
 @{
 }
 
@@ -53,7 +54,7 @@
                 <a class="btn btn-primary btn-sm mb-2" asp-controller="Store" 
                         asp-action="Details" asp-route-id="@product.Id"  role="button">Details</a>
                 <button type="button" class="btn btn-warning btn-sm mb-2">
-                    Add to Cart <i class="bg-info bi-cart4"></i>
+                    Add to Cart <i class="bg-info bi-cart4" onclick="addToCart(this, @product.Id)"></i>
                 </button>
             </div>
         </div>
