--- a/BestStoreMVC/Views/Account/Profile.cshtml
+++ b/BestStoreMVC/Views/Account/Profile.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ProfileDto
+@using BestStoreMVC.Models.ViewModel
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<ApplicationUser> UserManager
 
