--- a/BestStoreMVC/Views/Store/Details.cshtml
+++ b/BestStoreMVC/Views/Store/Details.cshtml
@@ -13,7 +13,7 @@
     <div class="col-12 col-lg-7 ps-lg-5">
         <h3 class="mb-3">@Model.Name</h3>
         <h3 class="mb-3">@(Model.Price)$</h3>
-        <button type="button" class="btn btn-warning btn-sm mb-2">
+        <button type="button" class="btn btn-warning btn-sm mb-2" onclick="addToCart(this, @Model.Id)">
             Add to Cart <i class="bg-info bi-cart4"></i>
         </button>
 
