--- a/BestStoreMVC/Views/AdminOrders/Details.cshtml
+++ b/BestStoreMVC/Views/AdminOrders/Details.cshtml
@@ -47,6 +47,8 @@
     }
 }
 
+<!-- cspell:ignoreWords tabindex -->
+
 <h3 class="text-center mb-4">
     Order Details
 </h3>
@@ -157,7 +159,7 @@
 
             <div class="row mb-2">
                 <div class="col">
-                    Registerd At
+                    Registered At
                 </div>
                 <div class="col">
                     @Model.Client.CreatedAt
