--- a/BestStoreMVC/Views/Shared/_Layout.cshtml
+++ b/BestStoreMVC/Views/Shared/_Layout.cshtml
@@ -159,9 +159,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="Index">Store</a>
                         </li>
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li> *@
                         @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Checkout" asp-action="Index">Checkout</a>
                         </li> *@
