1. 重構 Controller，加入三層式架構。

--- a/BestStoreMVC/Views/Account/ResetPassword.cshtml
+++ b/BestStoreMVC/Views/Account/ResetPassword.cshtml
@@ -22,9 +22,19 @@
             <strong>@ViewBag.SuccessMessage</strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+        
+        <div class="text-center">
+            <a class="btn btn-primary" asp-controller="Account" asp-action="Login">
+                Go to Login
+            </a>
+        </div>
     }
-
-    <form method="post">
+    else
+    {
+        <form method="post">
+            <!-- 隱藏的權杖欄位 -->
+            <input type="hidden" name="token" value="@ViewBag.Token" />
+            
         <div class="mb-3">
             <label class="form-label>">Email</label>
             <input asp-for="Email" class="form-control" />
@@ -53,5 +63,6 @@
                 </a>
             </div>
         </div>
-    </form>
+        </form>
+    }
 </div>
