--- a/BestStoreMVC/Views/Account/Login.cshtml
+++ b/BestStoreMVC/Views/Account/Login.cshtml
@@ -16,6 +16,14 @@
             </div>
         }
 
+        @if(TempData["SuccessMessage"] != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>@TempData["SuccessMessage"]</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+
 
         <form method="post">
             <div class="mb-3">
