--- a/BestStoreMVC/Views/Cart/Index.cshtml
+++ b/BestStoreMVC/Views/Cart/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row border rounded-3">
     <div class="col-md-8 p-3">
-        <h4>Shppoing Cart</h4>
+        <h4>Shopping Cart</h4>
         <hr />
 
         @if (ViewBag.ErrorMessage != null)
