1. 新增批次上傳產品圖片的功能。

--- a/BestStoreMVC/Views/Products/Index.cshtml
+++ b/BestStoreMVC/Views/Products/Index.cshtml
@@ -31,6 +31,7 @@
         <a class="btn btn-primary" asp-controller="Products" asp-action="Create">New Product</a>
         <a class="btn btn-success" asp-controller="Products" asp-action="ExportToExcel">Export to Excel</a>
         <a class="btn btn-info" asp-controller="Products" asp-action="ImportFromExcel">Import from Excel</a>
+        <a class="btn btn-secondary" asp-controller="Products" asp-action="BatchUploadImages">Batch upload images</a>
     </div>
     <div class="col">
         <form class="d-flex">
