--- a/BestStoreMVC/Views/_ViewImports.cshtml
+++ b/BestStoreMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BestStoreMVC
 @using BestStoreMVC.Models
+@using BestStoreMVC.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
